# Autonomous-Navigation

./: .gitignore  my_a_star.cpp
relaxed_astar_planner/: CMakeLists.txt  bgp_plugin.xml  package.xml
relaxed_astar_planner/include/relaxed_astar_planner/: relaxed_astar_planner.h
relaxed_astar_planner/src/: relaxed_astar_planner.cpp
