<?xml version="1.0"?>
<package format="2">
  <name>relaxed_astar_planner</name>
  <version>0.0.0</version>
  <description>The relaxed_astar_planner package</description>

  <maintainer email="kurtisdoubled@hotmail.com">Kurtis Dressel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>base_local_planner</build_depend> -->
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <!-- <build_export_depend>base_local_planner</build_export_depend> -->
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <!-- <exec_depend>base_local_planner</exec_depend> -->

  <export>
    <nav_core plugin="${prefix}/bgp_plugin.xml" />
  </export>
</package>
